# knowledge-miner

./: .env.example  .gitignore  ABSTRACT_FILTER.md  AGENTS.md  ARCHITECTURE.md  BACKLOG.md  CITATION_EXPANSION.md  CURRENT_SCOPE.md  DATA_SCHEMA.md  DEVELOPMENT_PLAN.md  HMI_PLAN.md  ITERATION_PROCESS.md  MANUAL_LIVE_LOGIC_TEST.md  PIPELINE_RULES.md  README.md  SEARCH_ENGINE.md  SERVER_RESTART.md  UI_SPEC.md  UI_UX_DETAILED_SPEC.md  V1_SPEC.md  alembic.ini  pyproject.toml  restart_server.sh  run_manual_logic_test.sh  run_server.sh  server_status.sh
alembic/: env.py
archive/: ABSTRACT_FILTER.md  CITATION_EXPANSION.md  DEVELOPMENT_PLAN.md  HMI_PLAN.md  ITERATION_PROCESS.md  README.md  SEARCH_ENGINE.md  UI_UX_DETAILED_SPEC.md  V1_SPEC.md  backlog_completed_2026-03.md
config/: domains_allowlist.txt  file_size_guardrails.json
scripts/: capture_db_flap_diagnostics.sh  check_file_sizes.py  manual_live_logic_test.py
tests/: test_acquisition_api.py  test_acquisition_engine.py  test_ai_filter.py  test_connectors.py  test_discovery.py  test_discovery_api.py  test_file_size_guardrails.py  test_hmi.py  test_hmi_acceptance.py  test_hmi_accessibility_contract.py  test_hmi_advanced_isolation.py  test_hmi_documents_contract.py  test_hmi_events_api.py  test_hmi_launch_routing.py  test_hmi_library_export_contract.py  test_hmi_review_contract.py  test_hmi_shell_contract.py  test_hmi_terminology_contract.py  test_hmi_ux_acceptance.py  test_hmi_v2.py  test_library_export_api.py  test_manual_live_logic_test.py  test_ops.py  test_parse_api.py  test_parse_engine.py  test_phase42_api.py  (+2 more)
(+68 files in other folders)
